--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,13 +3,13 @@ description: A new Flutter package project.
 version: 0.0.1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: '>=2.10.0 <3.0.0'
   flutter: '>=1.17.0'
 
 dependencies:
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.5
+  shared_preferences: ^0.5.12+4
 
 dev_dependencies:
   flutter_test:
